jwt security wip