@@ -1,7 +1,7 @@
 package com.mzaken.springbootangularbase.infra.security;
 
-import java.util.Arrays;
-
+import com.mzaken.springbootangularbase.infra.security.service.AppUserDetailService;
+import com.mzaken.springbootangularbase.infra.security.util.JwtUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -12,14 +12,14 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.NoOpPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import com.mzaken.springbootangularbase.infra.security.service.AppUserDetailService;
+import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -30,6 +30,12 @@ public class SecurityConfigurer extends WebSecurityConfigurerAdapter {
 	
 	@Autowired
 	private JwtRequestFilter jwtRequestFilter;
+
+	@Autowired
+	private JwtTokenAuthEntryPoint jwtTokenAuthEntryPoint;
+
+	@Autowired
+	private JwtUtil jwtUtil;
 
 	@Override
 	protected void configure(AuthenticationManagerBuilder auth) throws Exception {
@@ -51,11 +57,15 @@ public class SecurityConfigurer extends WebSecurityConfigurerAdapter {
 		http.cors()
 		.and()
 	    .csrf().disable()
+		.exceptionHandling()
+		.authenticationEntryPoint(jwtTokenAuthEntryPoint)
+		.and()
 	    .sessionManagement()
         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
         .and()
         .authorizeRequests()
-        .antMatchers("/index.html", "/", "/home", "/login").permitAll()
+        .antMatchers("/index.html", "/", "/register", "/login")
+		.permitAll()
         .anyRequest().authenticated();
 
 	    http.addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
@@ -64,10 +74,10 @@ public class SecurityConfigurer extends WebSecurityConfigurerAdapter {
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(Arrays.asList("*"));
+		configuration.setAllowedOrigins(List.of("*"));
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "OPTIONS"));
 		configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-	    configuration.setExposedHeaders(Arrays.asList("x-auth-token"));
+	    configuration.setExposedHeaders(List.of("x-auth-token"));
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
